@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2024-01-07T08:18:01Z",
-  "count_outdated" : 223,
-  "uniques_outdated" : 194,
-  "count" : 225,
-  "uniques" : 195,
+  "timestamp" : "2024-01-11T16:19:59Z",
+  "count_outdated" : 225,
+  "uniques_outdated" : 195,
+  "count" : 226,
+  "uniques" : 196,
   "clones" : [
     {
-      "timestamp": "2023-12-28T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "timestamp": "2024-01-11T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
